@@ -49,7 +49,7 @@ fun shouldApplyDokka(project: Project): Boolean {
 }
 
 tasks.wrapper {
-    gradleVersion = "8.5"
+    gradleVersion = "8.10"
 }
 
 defaultTasks("assemble")
@@ -111,10 +111,7 @@ subprojects {
         implementation(rootProject.libs.kotlin.stdlib)
 
         testImplementation(rootProject.libs.junit)
-
-        if (name != "vectoriadb-server") {
-            testImplementation(rootProject.libs.slf4j.simple)
-        }
+        testImplementation(rootProject.libs.slf4j.simple)
     }
 
 
@@ -133,7 +130,6 @@ subprojects {
     }
     tasks.withType<JavaCompile> {
         options.encoding = "UTF-8"
-        options.compilerArgs = listOf("--add-modules", "jdk.incubator.vector", "--enable-preview")
     }
 
     tasks.jar {
@@ -151,10 +147,7 @@ subprojects {
         maxHeapSize = "1g"
         jvmArgs = listOf(
             "-ea",
-            "-XX:+HeapDumpOnOutOfMemoryError",
-            "--add-modules",
-            "jdk.incubator.vector",
-            "--enable-preview"
+            "-XX:+HeapDumpOnOutOfMemoryError"
         )
     }
 
@@ -162,7 +155,6 @@ subprojects {
         isFailOnError = false
         options.quiet()
         (options as CoreJavadocOptions).addStringOption("Xdoclint:none", "-quiet")
-        (options as CoreJavadocOptions).addBooleanOption("-enable-preview", true)
         (options as CoreJavadocOptions).addStringOption("source", 17.toString())
     }
 
@@ -191,7 +183,7 @@ subprojects {
         withSourcesJar()
 
         toolchain {
-            languageVersion.set(JavaLanguageVersion.of(17))
+            languageVersion.set(JavaLanguageVersion.of(21))
         }
     }
 
